--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login-password --region ap-southeast-1 | docker login --username AWS --password-stdin 639170816275.dkr.ecr.ap-southeast-1.amazonaws.com/wpst-test-02)
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - REPOSITORY_URI=639170816275.dkr.ecr.ap-southeast-1.amazonaws.com/wpst-test-02
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
